// Copyright 2025 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.internal.securecomputation.controlplane;

import "google/api/field_behavior.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";

option java_package = "org.wfanet.measurement.internal.securecomputation.controlplane";
option java_multiple_files = true;
option java_outer_classname = "WorkItemProto";

// Proto representation of the internal `WorkItem` entity type.
message WorkItem {
  string work_item_resource_id = 1;

  // The id representing a `Queue` into which this `WorkItem` must be enqueued.
  string queue_resource_id = 2;

  // The parameters to be delivered to the TEE application.
  google.protobuf.Any work_item_params = 3
      [(google.api.field_behavior) = IMMUTABLE];

  // State of a `WorkItem`.
  enum State {
    // Default value if state is omitted.
    STATE_UNSPECIFIED = 0;

    // The `WorkItem` has been queued.
    QUEUED = 1;

    // There is at least one `WorkItemAttempt` associated with the `WorkItem`.
    RUNNING = 2;

    // The `WorkItem` has been successfully processed.
    SUCCEEDED = 3;

    // The `WorkItemAttempt` failed.
    FAILED = 4;
  }

  // State of this `WorkItem`.
  State state = 4 [(google.api.field_behavior) = OUTPUT_ONLY];

  google.protobuf.Timestamp create_time = 5
      [(google.api.field_behavior) = OUTPUT_ONLY];
  google.protobuf.Timestamp update_time = 6
      [(google.api.field_behavior) = OUTPUT_ONLY];
}
